--- a/src/app/user/show-user/edit-schedule/edit-schedule.component.html
+++ b/src/app/user/show-user/edit-schedule/edit-schedule.component.html
@@ -28,7 +28,10 @@
         <button (click)="selectLV()" class="btn LV">L-V</button>
         <!-- [ngClass]="{active: x.active}" -->
         <button (click)="createNewSchedule(day.day_id)" matTooltip="Crear Horario en día {{ day.day_id | dayPipe}}"  *ngFor="let day of days" class="btn black">{{ day.day }}</button>
-
+        <button class="btn blue" *ngIf="scheduleCopied">Horario Copiado: 
+            {{ scheduleCopied.check_in | time }} - {{ scheduleCopied.check_out | time }}
+        </button>
+        
         <form (submit)="form()">
             <table>
                 <thead>
