--- a/src/app/expense/update-expense/update-expense.component.html
+++ b/src/app/expense/update-expense/update-expense.component.html
@@ -19,20 +19,20 @@
 
                 <div class="l12">
                     <label>Nombre de Gasto:</label><br>
-                    <input class="l12" [(ngModel)]="expense.$name" name="$name" type="text">
+                    <input class="l12" [(ngModel)]="expense.name" name="name" type="text">
                     <small class="error" *ngIf="validation.name == 1">Se requieren por lo menos 7 caracteres.</small>
                 </div>
 
                 <div>
                     <label>Monto:</label><br>
-                    <input [(ngModel)]="expense.$amount" name="$amount" type="number" min="0">
+                    <input [(ngModel)]="expense.amount" name="amount" type="number" min="0">
                     <small class="error" *ngIf="validation.amount == 1">El valo no puede ser $0 o menos</small>
 
                 </div>
 
                 <div class="l12">
                     <label>Descripción:</label><br>
-                    <textarea [(ngModel)]="expense.$description" name="$description"></textarea>
+                    <textarea [(ngModel)]="expense.description" name="description"></textarea>
                 </div>
 
 
