--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -176,7 +176,7 @@
                     </div>
 
                     <div class="flexRow l12" *ngIf="user.user_type_id == 1 ">
-                        <h2 class="l12">Pago Mensual</h2>
+                        <h2 class="l12">Mensualidad</h2>
                         <div class="formData l6 m6">
                             <label>Monto:</label><br>
                             <input [(ngModel)]="user.monthly_payment.amount" name="amount" type="number" min="0" placehoder="Monto" *ngIf="credential >= 6">
@@ -227,19 +227,17 @@
                     </div>
 
                     <div class="formData l6 m6">
-                        <label>Genero:</label><br>
+                        <label>Género:</label><br>
                         <select [(ngModel)]="showUser.gender" name="gender" disabled>
-                <option value="1">Masculino</option> 
-                <option value="2">Femenino</option>
-            </select>
+                            <option value="1">Masculino</option> 
+                            <option value="2">Femenino</option>
+                        </select>
                     </div>
 
                     <div class="formData l6 m6">
-                        <label>Telefono:</label><br>
+                        <label>Teléfono:</label><br>
                         <input [(ngModel)]="showUser.phone" name="phone" type="tel" placeholder="Telefono" disabled>
                     </div>
-
-
 
                     <div class="formData l6 m6">
                         <label>Fecha de nacimiento:</label><br>
@@ -257,7 +255,7 @@
                     </div>
 
                     <div class="formData l6 m6">
-                        <label>Seguro Medico:</label><br>
+                        <label>Seguro Médico:</label><br>
                         <input [(ngModel)]="showUser.insurance" name="insurance" type="text" placeholder="Seguro social" disabled>
                     </div>
 
@@ -266,12 +264,10 @@
                         <p>{{ user.getStatusView() }}</p>
                     </div>
                 </div>
+
                 <!--FIN DE DATOS GENERALES DE USUARIO -->
-
-
-
                 <div class="flexRow l6 ">
-                    <h2 class="l12">Direccion</h2>
+                    <h2 class="l12">Dirección</h2>
 
                     <div class="formData l6 m6">
                         <label>Calle:</label><br>
@@ -279,7 +275,7 @@
                     </div>
 
                     <div class="formData l6 m6">
-                        <label>Numero de casa:</label><br>
+                        <label>Número de casa:</label><br>
                         <input [(ngModel)]="showUser.houseNumber" name="houseNumber" type="number" placeholder="Numero de casa" disabled><br>
                     </div>
 
@@ -292,7 +288,6 @@
                         <label>Ciudad:</label><br>
                         <input [(ngModel)]="showUser.city" name="city" type="text" placeholder="Ciudad" disabled><br>
                     </div>
-
 
                     <div class="flexRow l12" *ngIf="showUser.user_type_id >= 2 && showUser.user_type_id <= 4">
                         <h2 class="l12">Salario</h2>
