--- a/src/app/cutout/cutout.component.html
+++ b/src/app/cutout/cutout.component.html
@@ -18,10 +18,9 @@
 
     </div>
 </form>
+<p>Dinero en caja: <strong>$ {{ cashbox2.amount }}</strong></p>
 
-<p>Dinero en caja: <strong>$ {{ cashbox.amount }}</strong></p>
-
-<h4>Datos de Ultimo Recorto</h4>
+<h4>Datos de Ultimo Recorte</h4>
 <p>Monto: ${{cashHistory.allow}}</p>
 <p>Fecha/Hora de Corte: {{cashHistory.created_at}}</p>
 <p>Creador de corte: {{cashHistory.creator.name}}</p>
@@ -35,29 +34,25 @@
         <table align="center">
             <thead>
                 <tr>                                                           
-                    <th>Monto</th>
-                    <th>Usuario</th> 
-                    <th>Fecha/Hora</th>                    
-                    <th>Tipo de Pago</th> 
+                    <th class="left">Monto</th>
+                    <th class="left">Usuario</th> 
+                    <th>Fecha/Hora</th>                                        
                     <th>Descripción</th>
                 </tr>                
             </thead>
             <tbody >
                 <tr *ngFor="let re of receipts">
-                        <td>$ {{ re.amount }}</td>
-                    <td class="left">{{ re.user.name }}</td>
-                    
-                    <td>{{ re.created_at  }}</td>                    
-                    <td>{{ re.paymentTypeView  }}</td>                    
+                    <td class="left">${{ re.amount }}</td>
+                    <td class="left">{{ re.user.name }}</td>                    
+                    <td>{{ re.created_at  }}</td>                                        
                     <td>{{ re.descriptionView }}</td>
-
                 </tr>
             </tbody>
         </table>
     </div>    
     <div class="receiptDiv">
         <h3 (click)="showTable2 = !showTable2">Gastos:</h3>
-        <p class="red-text">$ {{ cutout.expenses }} </p>
+        <p class="red-text">${{ cutout.expenses }} </p>
         <i class="material-icons" [ngClass]='{"iconActive": showTable2 == true}'>arrow_drop_down</i>
         <div class="responsive-table" *ngIf="showTable2">
                 <table align="center">
@@ -71,7 +66,7 @@
                     </thead>
                     <tbody >
                         <tr *ngFor="let x of expenses">
-                                <td>$ {{ x.amount }}</td>
+                                <td>${{ x.amount }}</td>
                             <td class="left">{{ x.creator.name }}</td>
                             
                             <td>{{ x.created_at  }}</td>                    
@@ -84,6 +79,6 @@
     </div>
 
     <div class="receiptDiv">
-        <h3 (click)="showTable2 = !showTable2">Total:</h3>
+        <h3>Total:</h3>
         <p [ngClass]='{"green-text": (cutout.receipts - cutout.expenses) > 0}'>$ {{ cutout.receipts - cutout.expenses }} </p>
     </div>
